# cuDLA-samples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  test_coco_map.py
data/: coco_val_2017_list.txt  download_coco_validation_set.sh  trtexec-dla-standalone.patch
data/model/: README.md  build_dla_standalone_loadable.sh  build_dla_standalone_loadable_v2.sh  qat2ptq.cache  yolov5_trimmed_qat.onnx  yolov5s_trimmed_reshape_tranpose.onnx
export/: .gitignore  README.md
export/qdq_translator/: README.md  qdq_translator.py  requirements.txt  utils.py
export/yolov5-qat/models/: common.py
export/yolov5-qat/quantization/: quantize.py  rules.py
export/yolov5-qat/scripts/: qat.py
src/: README.md  cudla_context.cpp  cudla_context_hybrid.cpp  cudla_context_hybrid.h  cudla_context_standalone.cpp  cudla_context_standalone.h  decode_nms.cu  decode_nms.h  validate_coco.cpp  yolov5.cpp  yolov5.h
src/matx_reformat/: CMakeLists.txt  README.md  build_matx_reformat.sh  matx_reformat.cu  matx_reformat.h  test.cpp
